# passkey-attendance-system

./: .gitignore  LICENSE.md  README.md  docker-compose.postgres.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: api-reference.instructions.md  architecture-backlog.instructions.md  assurance-scoring.instructions.md  auth-flows.instructions.md  backend-conventions.instructions.md  data-model.instructions.md  (+3 more)
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  seed_data.py  seed_users.py
backend/alembic/: env.py
backend/alembic/versions/: 05499fe83021_add_created_by_and_user_policy_fk.py  07b210094a7b_add_sign_count_anomaly_to_credential.py  51597f518bab_add_audit_events.py  644cdcd0465e_add_missing_fields_batch1.py  948967293d89_policy_idor_refactor_and_geofence.py  bff5d2fd04e8_initial_schema.py  cfb426536950_add_class_policy.py  f763bc43f4b6_rename_max_checkin_retries_to_max_check_.py  v1definitive0001_schema.py
backend/api/: api.py  config.py  messages.py  models.py  redis.py  redis_keys.py  schemas.py  strings.py  worker.py
backend/api/contracts/: device.py
backend/api/helpers/: assurance.py  base64url.py  credential.py  device_payload.py  membership.py  schedule.py  tokens.py
backend/api/routes/: admin.py  audit.py  auth.py  bootstrap.py  check_in.py  classes.py  credentials.py  enrollments.py  events.py  integrity.py  login.py  orgs.py  policies.py  records.py  register.py  root.py  semesters.py  sessions.py  students.py  teachers.py  users.py
backend/api/services/: assurance_service.py  attestation_service.py  audit_service.py  auth_service.py  device_service.py  import_service.py  integrity_service.py  session_service.py  user_service.py
backend/api/services/android/: roots_service.py
backend/database/: __init__.py  connection.py  migrations.py  models.py
backend/db/: attendance.db  database.py  migrations.py  schema.sql
backend/sqlite/: attendance.db
backend/tests/: test_assurance_service.py  test_attestation_service.py  test_device_binding_service.py  test_membership.py  test_nfc_backend.py  test_offline_sync.py  test_register_options_route.py  test_register_verify_route.py
backend/tools/: issue_bootstrap_token.py
tools/: import_users.py
(+239 files in other folders)
