[project]
name = "passkey-attendance-system"
version = "0.1.0"
description = "A FIDO2 Passkey Attendance System Using Two-Factor Proximity and Credential-Based Authentication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.133.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
    "webauthn>=2.7.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]
