[project]
name = "passkey-attendance-system"
version = "0.1.0"
description = "A FIDO2 Passkey Attendance System Using Two-Factor Proximity and Credential-Based Authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2,<4",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "psycopg[binary]>=3.3.3",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.47",
    "tzdata>=2026.1",
    "uvicorn>=0.44.0",
    "webauthn>=2.7.1",
    "pyasn1>=0.6.3",
    "cbor2>=5.9.0",
]

[tool.pytest.ini_options]
addopts = "-p no:anyio"

[dependency-groups]
dev = [
    "anyio>=3.0,!=4.12.*",
    "coverage>=7.13.5",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
